--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Speculator</string>
+    <string name="name_pouch">Название кошелька</string>
+    
+    <string-array name="valuta">
+        <item>EUR</item>
+        <item>USD</item>
+        <item>RUB</item>
+        <item>UAH</item>
+    </string-array>
+
 </resources>
