--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="date">Дата</string>
     <string name="description">Описание</string>
     <string name="Fix">Зафиксировать</string>
-
+    <string name="Not_selected_wallet">Не выбран кошелек</string>
+    
     <string name="category">Категория</string>
     <string name="subcategory">Подкатегория</string>
     <string name="add">Добавить</string>
@@ -21,6 +22,13 @@
     <string name="addArticle">Добавить статью</string>
     <string name="deleteArticle">Удалить статью</string>
     <string name="main_wallet">Главный кошелек</string>
+    <string name="default_activity">Страница по умолчанию</string>
+    <string name="save">Сохранить</string>
+
+    <string name="main_activity">Главная страница</string>
+    <string name="budget_control_activity">Страница контроля бюджета</string>
+
+    <!-- Messages -->
 
 
 
