added small changes 08.03.2016

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="main_wallet">Главный кошелек</string>
     <string name="default_activity">Страница по умолчанию</string>
     <string name="save">Сохранить</string>
-    <string name="clear_all_saves">Очистить все сохранения</string>
+    <string name="clear_all_saves">Очистить все сохранения и восстановить настройки по умолчанию</string>
 
     <string name="main_activity">Главная страница</string>
     <string name="budget_control_activity">Страница контроля бюджета</string>
@@ -38,7 +38,7 @@
     <string name="statistic">Статистика</string>
 
     <!-- AllertDialog -->
-    <string name="Delete_all_files_preserving_and_recreate_them">Удалить все сохранения и заново создать их пустыми?
+    <string name="Delete_all_files_preserving_and_recreate_them">Удалить все сохранения и данные и восстановить настройки по умолчанию?
         Это приведет к потере всех записанных данных</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
